--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "TJHSST-AI"]
-	path = TJHSST-AI
-	url = https://github.com/anishs37/TJHSST-AI
 [submodule "TJHSST-Web-Dev"]
 	path = TJHSST-Web-Dev
 	url = https://github.com/anishs37/TJHSST-Web-Dev
@@ -16,3 +13,6 @@
 [submodule "TJHSST-Mobile-Dev"]
 	path = TJHSST-Mobile-Dev
 	url = https://github.com/anishs37/TJHSST-Mobile-Dev
+[submodule "TJHSST-AI-1"]
+	path = TJHSST-AI-1
+	url = https://github.com/anishs37/TJHSST-AI-1
